<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_ros_visualizer</name>
  <version>0.0.1</version>
  <description>A package to visualize PX4 topics in ROS 2</description>
  <maintainer email="atarbabgei@gmail.com">Atar Babgei</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>